feat(orchestrator): routage LLM par tiers, budget, gate archi selon autonomie
- Tiers dual-leg (Resilience4j), BudgetTracker, TieredLlmExecutor, Groq dans config

- ChatService via AiProviderRouter; GET /api/budget?runId=; UI budget sur run detail

- Pause architecture HITL uniquement pour autonomy confirm/observe (e2e autonomous)

- E2E: RunRequest 6 args; tests/mocks WorkflowEngine mis à jour

- docs/LLM_ROUTING.md, CLAUDE.md, AGENTS.md

Made-with: Cursor